--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
 /* Language: css */
 /* Path: style\style.css */
 
+
 /* body */
 body {
     align-items: center;
@@ -29,7 +30,7 @@ table {
     background-color: #FFFFFF;
     border-radius: 10px;
     border-width: 3px;
-    border-color: #FF5D73;
+    border-color: #0f0809;
     width: 80%;
     padding-inline-end: 100px;
     padding-inline-start: 100px;
@@ -39,4 +40,10 @@ table {
     align-items: center;
     padding: 10px;
     margin-left: 20%;
+}
+
+#beskrivelse {
+    align-items: center;
+    padding: 10px;
+    padding: 100px;
 }
