--- a/style/style.css
+++ b/style/style.css
@@ -6,27 +6,27 @@
 /* body */
 body {
     align-items: center;
-    background-color: #dfdbdb;
+    background-color: #808e95;
 }
 
 #header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #FFFFFF;
+    background-color: #f5f5f5;
     margin: auto;
     width: 60%;
     border-radius: 10px;
 }
 
+
+
 #footer {
     display: flex;
     justify-content: center;
     margin: auto;
-    background-color: #FFFFFF;
+    background-color: #f5f5f5;
     width: 60%;
-    border-radius: 10px;
-    border-width: 3px;
 }
 
 #logo {
@@ -34,49 +34,61 @@ body {
     justify-content: center;
 }
 
-#buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-end;
-}
-
 /* Hoved container*/
 #container {
     align-items: center;
-
-}
-
-h1 {
-    align-content: center;
-    color: #000000;
-    font-family: "Times New Roman", Times, serif;
-    font-size: 50px;
-    font-weight: bold;
-}
-/* Table*/
-table {
-    align-items: center;
-    justify-content: center;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    border-color: #0f0809;
 }
 
 #menu {
-    align-items: center;
+    display: flex;
     margin: auto;
     width: 60%;
-    padding-top: 10x;
-    padding-bottom: 10px;
+    background-color: #f5f5f5;
+    border-color: #0f0809;
+    margin-top: 10px;
+    border-radius: 20px;
 }
 
-#beskrivelse {
-    align-items: center;
+#menu-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 20px;
+}
+
+#menu-heading {
+    display: flex;
+    justify-content: center
+}
+
+.menu-item {    
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    border-color: #808e95;
+    margin: 10px;
+    width: 40%;
     padding: 10px;
-    padding: 100px;
+    background-color: #ffffff;
 }
 
-ul {
-    list-style-type: none;
+#menu-items {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 30px;
+    background-color: #f5f5f5;
+
+}
+
+.menu-item-header {
+    font-weight: bold;
+}
+
+.menu-item-description {
+    font-style: italic;
+}
+
+.menu-item-allergens {
+    font-style: oblique;
 }
