--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@
 /* Path: style\style.css */
 
 
+/* Import av fonter til prosjektet */
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 /* body */
 body {
     align-items: center;
@@ -11,13 +15,24 @@ body {
 
 #header {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     background-color: #f5f5f5;
     margin: auto;
     width: 60%;
     border-radius: 10px;
 }
+
+.contact-info {
+    font-family: 'Quicksand', bold;
+    font-size: 20px;
+}
+
+#contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 
 
@@ -31,13 +46,14 @@ body {
 
 #logo {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 /* Hoved container*/
 #container {
     align-items: center;
 }
+
 
 #menu {
     display: flex;
@@ -58,7 +74,7 @@ body {
 
 #menu-heading {
     display: flex;
-    justify-content: center
+    justify-content: center;
 }
 
 .menu-item {    
@@ -76,19 +92,40 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 30px;
+    padding: 10px;
     background-color: #f5f5f5;
-
 }
 
+#line {
+    color: black;
+    width: 20%;
+    margin: auto;
+}
+
+
+/* Tekst i div boksene under meny + diverse*/
 .menu-item-header {
-    font-weight: bold;
+    font-family: 'Quicksand', bold;
+    font-size: 20px;
 }
 
 .menu-item-description {
-    font-style: italic;
+    font-family: 'Quicksand', normal;
+    font-size: 15px;
 }
 
 .menu-item-allergens {
-    font-style: oblique;
+    font-family: 'Quicksand', oblique;
+    font-size: 15px;
+}
+
+.heading-text {
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Quicksand', bold;
+}
+
+#title {
+    font-family: 'Quicksand', bold;
+    font-size: 50px;
 }
